recursion.lessons.recursion.koch.Koch.scala.error
Koch:22: error: ')' expected but ';' found.
		snowSide(levels-1,length/(3*levels);
                                                   ^